*Empty MediaWiki Message*

--- a/გული.mw
+++ b/გული.mw
@@ -1,7 +1,11 @@
-'''გული''', ადამიანისა და ცხოველების სისხლის მიმოქცევის სისტემის ცენტრალური ორგანო, რომლის კუნთოვანი კედლის რიტმული შეკუმშვა განაპირობებს ორგანიზმში სისხლის ცირკულაციას.
+'''გული''', [[ადამიანი|ადამიანისა]] და [[ცხოველები|ცხოველების]] სისხლის მიმოქცევის სისტემის ცენტრალური ორგანო, რომლის კუნთოვანი კედლის რიტმული შეკუმშვა განაპირობებს ორგანიზმში სისხლის ცირკულაციას.
 
 გული ვითარდება სისხლგამტარი სისტემის ამა თუ იმ უბნის გარდაქმნის შედეგად სხეულის ზურგის (ჭიები, მოლუსკები, ფეხსახსრიანები და სხვა) ან მუცლის (ქორდიანები) ნაწილში.
 
+უმარტივესი სახით გულის ფუნქციას ასრულებს სისხლგამტარი სისტემის უბნების პულსაცია. ევოლუციურ პროცესში მოხდა გულის მორფოლოგიური  გამოკერძოება და საკუთარი მუსკულატურითა და სარქვლებით აღჭურვა, რამაც უზრუნველყო სისხლის ერთი მიმართულებით დენა (უმაღლესი ჭიები, ფეხსახსრიანები და სხვა). ბოლოს თვით გული გაიყო სისხლის შემკრებ (წინაგული) და გამდენ (პარკუჭი) ნაწილებად ([[მოლუსკები]], [[ხერხემლიანები]]).
+
+
+ლაყუჩებით მსუნთქავ ხერხემლიანებს ([[უყბოები]], [[თევზები]], [[ამფიბიები|ამფიბიებიის]] ლარვები), რომელთათვისაც დამახასიათებელია სისხლის მიმოქცევის ერთი წრე, აქვთ თითო წინაგული და პარჯუჭი (ორკამერიანი გული), სადაც მხოლოდ ვენური სისხლია. ფილტვებით სუნთქვისას, ე. ი.  სისხლის მიმოქცევის მეორე წრის გაჩენისას, გულში არტერიული სისხლიც შედის და გული მარჯვენა (ვენურ) და მარცხენა (არტერიულ) ნახევრად იყოფა.
 
 {{ესკიზი}}    
 [[კატეგორია:გული]]
