*Empty MediaWiki Message*

--- a/დაკარგული_თაობა.mw
+++ b/დაკარგული_თაობა.mw
@@ -1,4 +1,4 @@
-'''დაკარგული თაობა''' ([[''ინგლისური ენა|ინგლ''.]] "Lost Generation"), XX საუკუნის 20-იანი წლების ევროპელ და ამერიკელ მწერალთა ჯგუფის პირობითი სახელწოდება. ჯგუფის ლოზუნგი გახდა[[ სტაინი, გერტრუდ|გ. სტაინის]] სიტყვები: "თქვენ ყველანი დაკარგული თაობა ხართ!" ამ ჯგუფს მიაკუთვნებენ მწერლებს, რომლებმაც განიცადეს პირველი მსოფლიო ომის საშინელება, დაკარგეს დემოკრატიზმის გადარჩენის იმედი, რწმენა ტრადიციისა და მომავლისა და რომლებიც ანარქისტულ თვალსაზრისზე დადგნენ.
+'''დაკარგული თაობა''' (''[[ინგლისური ენა|ინგლ]].'' "Lost Generation"), XX საუკუნის 20-იანი წლების ევროპელ და ამერიკელ მწერალთა ჯგუფის პირობითი სახელწოდება. ჯგუფის ლოზუნგი გახდა [[სტაინი, გერტრუდ|გ. სტაინის]] სიტყვები: "თქვენ ყველანი დაკარგული თაობა ხართ!" ამ ჯგუფს მიაკუთვნებენ მწერლებს, რომლებმაც განიცადეს პირველი მსოფლიო ომის საშინელება, დაკარგეს დემოკრატიზმის გადარჩენის იმედი, რწმენა ტრადიციისა და მომავლისა და რომლებიც ანარქისტულ თვალსაზრისზე დადგნენ.
 
 
 
