*Empty MediaWiki Message*

--- a/ინშალა.mw
+++ b/ინშალა.mw
@@ -1,12 +1,12 @@
-'''ინშალლაჰ''' (არაბ.:ان شاء الله, ინგ.: Insha'Allah) არაბული ფრაზაა, რომელსაც მუსლიმები წარმოთქვამენ იმედის გამოსახატავად, რომ ესათუის ხსენებული მოვლენა მომავალში მოხდება. მისი უახლოესი ქართული ვარიანტია ”ღვთის ნებით”, თუმცა არაბულ ფორმას უფრო ხაზგასმულად რელიგიური დატვირთვა აქვს.
+'''ინშალლაჰ''' (არაბ.:ان شاء الله, ინგ.: Insha'Allah) [[არაბული ენა|არაბული]] ფრაზაა, რომელსაც მუსლიმები წარმოთქვამენ იმედის გამოსახატავად, რომ ესათუის ხსენებული მოვლენა მომავალში მოხდება. მისი უახლოესი ქართული ვარიანტია ”ღვთის ნებით”, თუმცა არაბულ ფორმას უფრო ხაზგასმულად რელიგიური დატვირთვა აქვს.
 
 ეს სიტყვა მსოფლიოს სხვა ერებშიც გავრცელდა და ხშირად გამოიყენება სურვილის გამოსახატავად რაიმეს გაკეთების რაც შესაძლოა ფაქტიურად არ მოხდეს. შენიღბულად ის ასევე გამოხატავს მავანის ყოყმანს თუ ის ვალდებულია რაიმეს დათანხმდეს, თუმცა საპირისპიროს ამჯობინებს.
 
 ესპანური ფრაზა ojalá que და პორტუგალიური oxalá (”ვიმედოვნებ”) მომდინარეობს ფრაზიდან law šá lláh (”ღვთის ნებით”). ეს ერთ-ერთია იმ მრავალ სიტყვათაგან, რომელიც არაბულიდანაა ნასესხები სამხრეთ ესპანეთის მე-8-დან მე-15 საუკუნემდე მუსლიმთა მფლობელობაში ყოფნის გავლენით.
 
-[[კატეგორია:არაბული სიტყვები]]
+[[კატეგორია:არაბული ფრაზები]]
 
 [[de:Inschallah]]
-[[ka:Insha'Allah[[
+[[en:Insha'Allah[[
 [[ko:인샬라]]
 [[sv:Insha'Allah]]
