*Empty MediaWiki Message*

--- a/იოანე.mw
+++ b/იოანე.mw
@@ -9,7 +9,7 @@
 * [[იოანე (ავალიშვილი)|იოანე]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[იოანე (დიასამიძე)|იოანე]] - აღმოსავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[იოანე (ჯორჯაძე)|იოანე]] - სასულიერო მოღვაწე
-* [[იოანე. ანჩელი]] - საეკლესიო მოღვაწე
+* [[იოანე ანჩელი]] - საეკლესიო მოღვაწე
 * [[იოანე ბატონიშვილი]] - სახელმწიფო მოღვაწე
 * [[იოანე ბერაი]] - კალიგრაფი
 * [[იოანე ბოლნელი]] - საეკლესიო მოღვაწე
