*Empty MediaWiki Message*

--- a/კრემლი.mw
+++ b/კრემლი.mw
@@ -1,7 +1,9 @@
+[[სურათი:Kremlintowers.jpg|thumb|მოსკოვის კრემლი XIX საუკუნეში]]
 '''კრემლი''' (რუს.: Кремль) რუსულად ციხესიმაგრეს, ციტადელს, ციხეკოშკს აღნიშნავს და მიუთითებს დიდ გამაგრებულ ცენტრალურ კომპლექსზე, რომელიც ტიპიურია ისტორიული რუსული ქალაქებისთვის. ხშირად ეს სიტყვა მიუთითებს ამგვარ ციხესიმაგრეთაგან ყველაზე ცნობილ [[მოსკოვის კრემლი|მოსკოვის კრემლზე]], ან მთავრობაზე, რომელიც იქ მდებარეობს. წმინდა ბასილის ციტადელს ხშირად შეცდომით კრემლს უწოდებენ მისი განსაკუთრებული ფორმის გამო, თუმცა სინამდვილეში ის მოსკოვის კრემლის ნაწილი არაა. კრემლის აგების ადგილად ხშირად მდინარის ან სხვა რაიმე ბუნებრივი წინაღობის პირას არსებულ შემაღლებას ირჩევდნენ.
 
 ==რუსული ქალაქები კრემლით==
-===მსოფლიო მემკვირეობის სიაში==
+[[სურათი:Smolensk kremlin.jpg|thumb|250px|სმოლენსკის კრემლის გალავანი 1912 წ.]]
+===მსოფლიო მემკვირეობის სიაში===
 *[[მოსკოვის კრემლი|მოსკოვი]]
 *[[ნოვგოროდის კრემლი|ნოვგოროდი]]
 *[[ყაზანის კრემლი|ყაზანი]]
@@ -31,6 +33,8 @@
 *ბოროვსკი
 *ოპოჩკა
 *სტაროდუბი
+
+[[სურათი:Kazankremlinnew.jpg|thumb|center|600px|ყაზანის კრემლში ჰარმონილუადაა შერწყმული ქრისტიანული და მუსულმანური კულტურის ელემენტები]]
 
 [[კატეგორია:რუსეთის ციხესიმაგრეები]]
 
