*Empty MediaWiki Message*

--- a/ყაზანის_კრემლი.mw
+++ b/ყაზანის_კრემლი.mw
@@ -1,9 +1,10 @@
 [[სურათი:Kazankremlin.jpg|thumb|ხედი სპასსკაიას კოშკზე XX საუკ. დამდეგს.]]
-'''ყაზანის კრემლი''' (თათრ.: kirmän; რუს.: Казанский Кремль) მთავარი ისტორიული ციტადელია [[ტატარსტანი|ტატარსტანში]], მდებარეობს ქალაქ [[ყაზანი|ყაზანში]] და აგებულ იქნა [[ივანე მრისხანე|ივანე მრისხანეს]] ბრძანებით ყოფილი ყაზანის ხანთა ციხესიმაგრის ნანგრევებზე. კრემლი 2000 წელს [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის სიაში იქნა შეტანილი.
+'''ყაზანის კრემლი''' (თათრ.: kirmän; რუს.: Казанский Кремль) მთავარი ისტორიული ციტადელია [[ტატარსტანი|ტატარსტანში]], მდებარეობს ქალაქ [[ყაზანი|ყაზანში]] და აგებულ იქნა [[ივანე მრისხანე|ივანე მრისხანეს]] ბრძანებით ყოფილი ყაზანის ხანთა ციხესიმაგრის ნანგრევებზე. კრემლი 2000 წელს [[იუნესკო|იუნესკოს]] მსოფლიო კულტურული მემკვიდრეობის ძეგლთა სიაში იქნა შეტანილი.
 
 {{ესკიზი}}
 
 [[კატეგორია:რუსეთის ისტორიული ძეგლები]]
+[[კატეგორია:მსოფლიო მემკვირეობის ძეგლები]]
 
 [[en:Kazan Kremlin]]
 [[ko:카잔 크렘린]]
