*Empty MediaWiki Message*

--- a/ყაზანის_კრემლი.mw
+++ b/ყაზანის_კრემლი.mw
@@ -4,7 +4,7 @@
 {{ესკიზი}}
 
 [[კატეგორია:რუსეთის ისტორიული ძეგლები]]
-[[კატეგორია:მსოფლიო მემკვიდრეობის ძეგლები]]
+[[კატეგორია:მსოფლიო კულტურული მემკვიდრეობის ძეგლები]]
 
 [[en:Kazan Kremlin]]
 [[ko:카잔 크렘린]]
