*Empty MediaWiki Message*

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -1,5 +1,8 @@
 ===ეტიმოლოგია===
 
+[[სურათი:Tetri nagazi.jpg|thumb|თეთრი ნაგაზი]]
+
+
 '''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია.
 
 ===ჯიშის ისტორია===
