--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -7,7 +7,7 @@
 
 ===ჯიშის ისტორია===
 
-[[სურათი:Nagazi_changlebit.gif|thumb|ნაგაზი „ჩანგლებით“]]
+[[სურათი:Nagazi_changlebit.gif|thumb|ნაგაზი ჯავშან-„ჩანგლებით“]]
 [[სურათი:Kelgamogadruli_cxvari.png|thumb|მგლის მიერ ყელგამოღადრული ცხვარი]]
 
 '''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). 
