--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -20,6 +20,6 @@
 
 ===რესურსები ვებში===
 
-* [http://bpg.sytes.net/nagazi|საითი „ნაგაზი“]
+* [http://bpg.sytes.net/nagazi||ვებ საითი „ნაგაზი“]
 
 (სტატია დამუშავების პროცესშია)
