*Empty MediaWiki Message*

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -1,14 +1,13 @@
 ===ეტიმოლოგია===
 
 [[სურათი:Tetri nagazi.jpg|thumb|თეთრი ნაგაზი]]
-
-
 '''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია.
 
 ===ჯიშის ისტორია===
 
 [[სურათი:Nagazi_changlebit.gif|thumb|ნაგაზი ჯავშან-„ჩანგლებით“]]
 [[სურათი:Kelgamogadruli_cxvari.png|thumb|მგლის მიერ ყელგამოღადრული ცხვარი]]
+კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 
 '''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). 
 
@@ -16,7 +15,28 @@
 
 განსხვავებით ევროპული მეცხვარული ძაღლებისაგან, ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად, არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ყელს ღადრავს 5-7 ცხვარს). ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის ფასეულობაზე.
 
-კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
+===ნაგაზის ადგილი ჯიშში===
+
+კავკასიური მეცხვარული ძაღლი
+ 
+* მთის 
+* - დიდი კავკასიონის 
+* - - ნაგაზი 
+* - - დაღესტნური 
+* - მცირე კავკასიონის 
+* - -  ყარაბაში 
+* - - ყარსული 
+ 
+* ბარის 
+* - გამპრი 
+* - აზერბაიჯანული 
+
+1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბღოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტებისა და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად (მათ შორის „ბერლინის კედლისა“). 
+
+საბჭოთა კავშირის მთავარი კონოლოგი მაზოვერი აღნიშნავდა, რომ ქართული ნაგაზი საუკეთესო იყო კავკასიური მეცხვარულ ძაღლებში. სპეციალისტები ერთხმად აღნიშნავენ, რომ კავკასიური ცხვრის ძაღლის მოჯიშება უმთავრესად ეფუძნებოდა საქართველოდან გაყვანილ საუკეთესო ეგზემპლიარებს (დიდი მასშტაბებით ჩატარებულმა ამ ღონისძიებამ დიდად დააზარალა ნაგაზის ჯიში საკუთრივ საქართველოში). 
+
+გასული საუკუნის 70-80-იანი წლებისათვის საბჭოთა ჯიშთსანაშენეებმა დიდი და მიზანდასახული მუშაობით მნიშვნელოვნად დახვეწეს და გააუმჯობესეს ჯიში, რომელიც არსებითად დაშორდა აბორიგენულ წინაპრებს. საუკუნეების მიჯნაზე, საბჭოთა კავშირის დაშლის შემდგომ, რუსეთმა „კავკასიური მეცხვარული ძაღლი“ და მისი სტანდარტი საერთაშორისო მასშტაბით დაარეგისტრირა როგორც რუსული ჯიში.
+
 
 ===რესურსები ვებში===
 
