--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -48,4 +48,11 @@
 
 * [http://bpg.sytes.net/nagazi ვებ საითი „ნაგაზი“]
 
+
+===ტერმინის თარგმანი===
+
+კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
+ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
+
+
 (სტატია დამუშავების პროცესშია)
