--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -10,7 +10,7 @@
 [[სურათი:Nagazi_changlebit.gif|thumb|ნაგაზი ჯავშან-„ჩანგლებით“]]
 [[სურათი:Kelgamogadruli_cxvari.png|thumb|მგლის მიერ ყელგამოღადრული ცხვარი]]
 
-'''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). 
+'''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). ქართველი მეცხვარეები გაორჩეულ ნაგაზებს, რომლებიც გამოცდილი არიან მგელთან შებრძოლებაში „მახრჩობელებსაც“ უწოდებენ (Волкодав).
 
 
 ზოგჯერ შეცდომით ნაგაზს „ქართულ ნაგაზსაც“ უწოდებენ (სხვა ნაგაზი ქართულის გარდა არ არსებობს), ხოლო - გერმანულ მეცხვარულ ძაღლს კი ასევე შეცდომით „გერმანულ ნაგაზს“. ნაგაზი ფართო გამოყენების ჯიშია და იგი გამოიყენებოდა როგორც მეცხვარული (ცხვრის), აგრეთვე - მოდარაჯე და საბრძოლო მიზნებისათვის. 
