--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -13,7 +13,7 @@
 '''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). ქართველი მეცხვარეები გამორჩეულ ნაგაზებს, რომლებიც გამოცდილი არიან მგელთან შებრძოლებაში „მახრჩობელებსაც“ უწოდებენ (Волкодав). ნაგაზი ფართო გამოყენების ჯიშია და იგი გამოიყენებოდა როგორც მეცხვარული (ცხვრის), აგრეთვე - მოდარაჯე და საბრძოლო მიზნებისათვის. 
 
 
-ზოგჯერ შეცდომით ნაგაზს „ქართულ ნაგაზსა“ უწოდებენ (სხვა ნაგაზი ქართულის გარდა არ არსებობს), ხოლო - გერმანულ მეცხვარულ ძაღლს კი ასევე შეცდომით უწოდებენ „გერმანულ ნაგაზს“. 
+ზოგჯერ შეცდომით ნაგაზს „ქართულ ნაგაზს“ უწოდებენ (სხვა ნაგაზი ქართულის გარდა არ არსებობს), ხოლო - გერმანულ მეცხვარულ ძაღლს კი ასევე შეცდომით უწოდებენ „გერმანულ ნაგაზს“. 
 
 
 განსხვავებით ევროპული მეცხვარული ძაღლებისაგან, ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად, არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ყელს ღადრავს 5-7 ცხვარს). ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის ფასეულობაზე.
