--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -24,14 +24,14 @@
  
 * მთის 
 * - დიდი კავკასიონის 
-* - - ნაგაზი 
+* - - '''ნაგაზი''' 
 * - - დაღესტნური 
 * - მცირე კავკასიონის 
-* - -  ყარაბაში 
-* - - ყარსული 
+* - - '''ყარაბაში''' 
+* - - '''ყარსული''' 
  
 * ბარის 
-* - გამპრი 
+* - '''გამპრი''' 
 * - აზერბაიჯანული 
 
 
@@ -42,7 +42,6 @@
 
 
 გასული საუკუნის 70-80-იანი წლებისათვის საბჭოთა ჯიშთსანაშენეებმა დიდი და მიზანდასახული მუშაობით მნიშვნელოვნად დახვეწეს და გააუმჯობესეს ჯიში, რომელიც არსებითად დაშორდა აბორიგენულ წინაპრებს. საუკუნეების მიჯნაზე, საბჭოთა კავშირის დაშლის შემდგომ, რუსეთმა „კავკასიური მეცხვარული ძაღლი“ და მისი სტანდარტი საერთაშორისო მასშტაბით დაარეგისტრირა როგორც რუსული ჯიში.
-
 
 ===რესურსები ვებში===
 
