/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -27,12 +27,15 @@
 * - - '''ნაგაზი''' 
 * - - დაღესტნური 
 * - მცირე კავკასიონის 
-* - - '''ყარაბაში''' 
+* - - ყარაბაში 
 * - - '''ყარსული''' 
  
 * ბარის 
 * - '''გამპრი''' 
 * - აზერბაიჯანული 
+
+ზემოთჩამოთვლილიდა ნაგაზი, ყარაბაში, ყარსული
+და გამპრი - კერძო, საკუთარი სახელებია.
 
 
 1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბღოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
