/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -27,15 +27,14 @@
 * - - '''ნაგაზი''' 
 * - - დაღესტნური 
 * - მცირე კავკასიონის 
-* - - ყარაბაში 
-* - - '''ყარსული''' 
+* - - '''ყარაბაში''' 
+* - - ყარსული 
  
 * ბარის 
 * - '''გამპრი''' 
 * - აზერბაიჯანული 
 
-ზემოთჩამოთვლილიდა ნაგაზი, ყარაბაში, ყარსული
-და გამპრი - კერძო, საკუთარი სახელებია.
+ზემოთჩამოთვლილიდა ნაგაზი, ყარაბაში, ყარსული და გამპრი - კერძო, საკუთარი სახელებია.
 
 
 1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბღოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
