/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -34,7 +34,7 @@
 * - '''გამპრი''' 
 * - აზერბაიჯანული 
 
-ზემოთჩამოთვლილიდა ნაგაზი, ყარაბაში, ყარსული და გამპრი - კერძო, საკუთარი სახელებია.
+ზემოთჩამოთვლილიდან ნაგაზი, ყარაბაში, ყარსული და გამპრი - ქვეჯიშების კერძო, საკუთარი სახელებია.
 
 
 1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბღოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
