/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -37,7 +37,7 @@
 ზემოთჩამოთვლილიდან ნაგაზი, ყარაბაში, ყარსული და გამპრი - ქვეჯიშების კერძო, საკუთარი სახელებია.
 
 
-1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბღოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
+1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბჭოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
 
 
 საბჭოთა კავშირის მთავარი კონოლოგი მაზოვერი აღნიშნავდა, რომ ქართული ნაგაზი საუკეთესო იყო კავკასიური მეცხვარულ ძაღლებში. სპეციალისტები ერთხმად აღნიშნავენ, რომ კავკასიური ცხვრის ძაღლის მოჯიშება უმთავრესად ეფუძნებოდა საქართველოდან გაყვანილ საუკეთესო ეგზემპლიარებს (დიდი მასშტაბებით ჩატარებულმა ამ ღონისძიებამ დიდად დააზარალა ნაგაზის ჯიში საკუთრივ საქართველოში). 
