--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -34,7 +34,7 @@
 * - '''გამპრი''' 
 * - აზერბაიჯანული 
 
-ზემოთჩამოთვლილიდან ნაგაზი, ყარაბაში, ყარსული და გამპრი - ქვეჯიშების კერძო, საკუთარი სახელებია.
+ზემოთჩამოთვლილიდან ნაგაზი, ყარაბაში და გამპრი - ქვეჯიშების '''კერძო, საკუთარი სახელებია'''.
 
 
 1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბჭოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
