--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -1,9 +1,7 @@
 [[სურათი:Tetri nagazi.jpg|thumb|თეთრი ნაგაზი]]
 ===ეტიმოლოგია===
 
-'''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია.
-
-
+'''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი, „გვარიანი“ და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია.
 
 ===ჯიშის ისტორია===
 
