--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -5,7 +5,7 @@
 
 ===ჯიშის ისტორია===
 
-[[სურათი:Nagazi_changlebit.gif|thumb|ნაგაზი ჯავშან-„ჩანგლებით“]]
+[[სურათი:Nagazi_changlebit.gif|thumb|მგლის მახრჩობელა ნაგაზი ჯავშან-„ჩანგლებით“]]
 [[სურათი:Kelgamogadruli_cxvari.png|thumb|მგლის მიერ ყელგამოღადრული ცხვარი]]
 
 '''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულებისა „ყარაბაში“ და „ყარსული“). ქართველი მეცხვარეები გამორჩეულ ნაგაზებს, რომლებიც გამოცდილი არიან მგელთან შებრძოლებაში „მახრჩობელებსაც“ უწოდებენ (Волкодав). ნაგაზი ფართო გამოყენების ჯიშია და იგი გამოიყენებოდა როგორც მეცხვარული (ცხვრის), აგრეთვე - მოდარაჯე და საბრძოლო მიზნებისათვის. 
