--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -17,7 +17,7 @@
 განსხვავებით ევროპული მეცხვარული ძაღლებისაგან, ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად, არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ყელს ღადრავს 5-7 ცხვარს). ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის ფასეულობაზე.
 
 ===ნაგაზის ადგილი ჯიშში===
-[[სურათი:Caucassian_Ovcharka_Topush_Georgia_1950ies.png|thumb|საბჭოთა კავკასიური მეცხვარული ძაღლის ჯიშის დამაფუძნებელი, ლეგენდარული „თოფუშა“ - რომელსაც ათობით მგელი ჰყავდა მოკლული]]
+[[სურათი:Caucassian_Ovcharka_Topush_Georgia_1950ies.png|thumb|საბჭოთა კავკასიური მეცხვარული ძაღლის ჯიშის დამაფუძნებელი, 1950-აინი წლების მრავალგზის ჩემპიონი, ლეგენდარული „თოფუშა“ - რომელსაც ათობით მგელი ჰყავდა მოკლული]]
 
 '''კავკასიური მეცხვარული ძაღლი'''
  
