/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -35,6 +35,7 @@
 
 ზემოთჩამოთვლილიდან ნაგაზი, ყარაბაში და გამპრი - ქვეჯიშების '''კერძო, საკუთარი სახელებია'''.
 
+===ნაგაზი საბჭოთა კავშირში===
 
 1950-იანი წლებიდან კავკასიური ნაგაზის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბჭოთა კავშირში. ათობით ათასი კავკასიური ნაგაზი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
 
