--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -45,10 +45,26 @@
 
 გასული საუკუნის 70-80-იანი წლებისათვის საბჭოთა ჯიშთსანაშენეებმა დიდი და მიზანდასახული მუშაობით მნიშვნელოვნად დახვეწეს და გააუმჯობესეს ჯიში, რომელიც არსებითად დაშორდა აბორიგენულ წინაპრებს. საუკუნეების მიჯნაზე, საბჭოთა კავშირის დაშლის შემდგომ, რუსეთმა „კავკასიური მეცხვარული ძაღლი“ და მისი სტანდარტი საერთაშორისო მასშტაბით დაარეგისტრირა როგორც რუსული ჯიში.
 
+===ნაგაზი საქართველოში===
+
+ნაგაზების ტრადიციული მეჯიშეები განსაკუთრებით არიან თუშები, რომელთა არსებობა მთლიანად მეცხვარეობას ეფუძნება. თუშები ტრადიციულად თავის ცხვართან ერთად მომთაბარეობდნენ საქართველოს მრავალ რეგიონსა (ელდარის იალაღები) და ჩრდილო კავკასიაში (ყიზლარის იალაღები) და ყველგან ავრცელებდნენ ნაგაზებს. 
+
+
+მეორე ომისშემდგომ საქართველოში ნაგაზის ჯიშის აღდგენაზე ზრუნვა კერძო ენთუზიასტებმა დაიწყეს 70-იანი წლებიდან, როდესაც „ფაუნის მოყვარულთა კლუბმა“ გარემოს დაცვის სამინისტროს მხარდაჭერით მოაწყეს ექსპედიცია საქართველოს რაიონებში ჯიშის მდგომერეობის შესასწავლად. მოეწყო აგრეთვე საგანგებო ტელეგადაცემები და დაიბეჭდა საგაზეთო სტატიები - რომელთა მიზანი იყო ნაგაზის ჯიშის გადარჩენა და გაუმჯობესება. ამავე პერიოდში გამოფენებზე გამოჩნდნენ პირველი აბორიგენული ნაგაზები და რუსეთიდან ჩამოჯიშებული კავკასიური მეცხვარული ძაღლები. 1970-იანი წლების თბილისის ჩემპიონებს შორის იყვნენ ხვადი „ზორბა“ და ძუკნები „ციბა“ და „ჩუკა“.
+
+
+საქართველოს დამოუკიდებლობის აღდგენის შემდგომ ნაგაზის ჯიშის აღდგენა-გაუმჯობესებაზე მუშაობა განახლდა. სამწუხაროდ, ჯიშთსანაშენეებში უპირატესად იყენებენ რუსეთიდან იმპორტირებულ კავკასიურ მეცხვარულ ძაღლებს და კვლავ ნაკლები ყურადღება ექცევა აბორიგენული სისხლის გამოყენებას.
+
+
+დიდი წარმატება ხვდა წილად კავკასიური მეცხვარული ძაღლების აჭარის ჯიშთსანაშენეს (ა.აბაშიძე), რომლის ნაგაზი „ბასმაჩი“ მრავალგზის მსოფლიო ჩემპიონი გახდა. სამწუხაროდ აჭარაში რევოლუციის შემდგომ ეს ჯიშთსანაშენე დაიშალა და ძაღლების უმეტესობა კვლავ რუსეთში მოხვდა. მსოფლიო ჩემპიონი ამავე პერიოდში გახდა კავკასიური მეცხვარული ძაღლი „სიმბა“ წოდორეთიდან.
+
+
+ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის ნაგაზებზე - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება.
+
+
 ===რესურსები ვებში===
 
 * [http://bpg.sytes.net/nagazi ვებ საითი „ნაგაზი“]
-
 
 ===ტერმინის თარგმანი===
 
