*Empty MediaWiki Message*

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -47,6 +47,8 @@
 
 ===ნაგაზი საქართველოში===
 
+[[სურათი:Simba.jpg|thumb|მსოფლიოს ჩემპიონი „სიმბა“ წოდორეთიდან]]
+
 ნაგაზების ტრადიციული მეჯიშეები განსაკუთრებით არიან თუშები, რომელთა არსებობა მთლიანად მეცხვარეობას ეფუძნება. თუშები ტრადიციულად თავის ცხვართან ერთად მომთაბარეობდნენ საქართველოს მრავალ რეგიონსა (ელდარის იალაღები) და ჩრდილო კავკასიაში (ყიზლარის იალაღები) და ყველგან ავრცელებდნენ ნაგაზებს. 
 
 
