--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -58,11 +58,10 @@
 საქართველოს დამოუკიდებლობის აღდგენის შემდგომ ნაგაზის ჯიშის აღდგენა-გაუმჯობესებაზე მუშაობა განახლდა. სამწუხაროდ, ჯიშთსანაშენეებში უპირატესად იყენებენ რუსეთიდან იმპორტირებულ კავკასიურ მეცხვარულ ძაღლებს და კვლავ ნაკლები ყურადღება ექცევა აბორიგენული სისხლის გამოყენებას.
 
 
-დიდი წარმატება ხვდა წილად კავკასიური მეცხვარული ძაღლების აჭარის ჯიშთსანაშენეს (ა.აბაშიძე), რომლის ნაგაზი „ბასმაჩი“ მრავალგზის მსოფლიო ჩემპიონი გახდა. სამწუხაროდ აჭარაში რევოლუციის შემდგომ ეს ჯიშთსანაშენე დაიშალა და ძაღლების უმეტესობა კვლავ რუსეთში მოხვდა. მსოფლიო ჩემპიონი ამავე პერიოდში გახდა კავკასიური მეცხვარული ძაღლი „სიმბა“ წოდორეთიდან.
+დიდი წარმატება ხვდა წილად კავკასიური მეცხვარული ძაღლების აჭარის ჯიშთსანაშენეს (ა.აბაშიძე), რომლის ნაგაზი „ბასმაჩი“ მრავალგზის მსოფლიო ჩემპიონი გახდა. სამწუხაროდ აჭარაში რევოლუციის შემდგომ ეს ჯიშთსანაშენე დაიშალა და ძაღლების უმეტესობა კვლავ რუსეთში მოხვდა. მსოფლიო ჩემპიონი ამავე პერიოდში გახდა კავკასიური მეცხვარული ძაღლი „სიმბა“ (მ.კუასელი) წოდორეთიდან.
 
 
 ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის ნაგაზებზე - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება.
-
 
 ===რესურსები ვებში===
 
