--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -48,6 +48,8 @@
 ===ნაგაზი საქართველოში===
 
 [[სურათი:Simba.jpg|thumb|მსოფლიოს ჩემპიონი „სიმბა“ წოდორეთიდან]]
+[[სურათი:Basmach_abashidze.png|thumb|მსოფლიოს ჩემპიონი „ბასმაჩი“ (ა.აბაშიძე)]]
+
 
 ნაგაზების ტრადიციული მეჯიშეები განსაკუთრებით არიან თუშები, რომელთა არსებობა მთლიანად მეცხვარეობას ეფუძნება. თუშები ტრადიციულად თავის ცხვართან ერთად მომთაბარეობდნენ საქართველოს მრავალ რეგიონსა (ელდარის იალაღები) და ჩრდილო კავკასიაში (ყიზლარის იალაღები) და ყველგან ავრცელებდნენ ნაგაზებს. 
 
