--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -68,6 +68,13 @@
 ===რესურსები ვებში===
 
 * [http://bpg.sytes.net/nagazi ვებ საითი „ნაგაზი“]
+* [http://mamuli.net/portal/ge/forum/forum_posts.asp?TID=248&PN=1 ფორუმი  „ნაგაზი - ქართული ენდემური ძაღლი“]
+
+
+===ქართული ჯიშთსანაშენეები===
+
+* [http://www.simba.com.ge/ „სიმბა“]
+* [http://www.bombora.com.ge/ „ბომბორა“]
 
 ===ტერმინის თარგმანი===
 
