--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -81,5 +81,7 @@
 * კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 * ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
 
+'''შენიშვნა''': Овчарка, Shepherd, Sheep dog არ შეიძლება ითარგმნოს როგორც „ნაგაზი“, არამედ ყოველთვის უნდა ითარგმნოს როგორც „მეცხვარული ძაღლი“.
+
 
 (სტატია დამუშავების პროცესშია)
