/* ნაგაზის ადგილი ჯიშში */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -18,6 +18,7 @@
 
 ===ნაგაზის ადგილი ჯიშში===
 [[სურათი:Caucassian_Ovcharka_Topush_Georgia_1950ies.png|thumb|საბჭოთა კავკასიური მეცხვარული ძაღლის ჯიშის დამაფუძნებელი, 1950-აინი წლების მრავალგზის ჩემპიონი, ლეგენდარული „თოფუშა“ - რომელსაც ათობით მგელი ჰყავდა მოკლული]]
+[[სურათი:Nagazi_mcveli.jpg|thumb|ნაგაზი იცავს პატრონს]]
 
 '''კავკასიური მეცხვარული ძაღლი'''
  
