--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -83,7 +83,7 @@
 * კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 * ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
 
-'''შენიშვნა''': Овчарка, Shepherd, Sheep dog არ შეიძლება ითარგმნოს როგორც „ნაგაზი“, არამედ ყოველთვის უნდა ითარგმნოს როგორც „მეცხვარული ძაღლი“.
+'''შენიშვნა''': Овчарка, Shepherd, Sheep dog არ შეიძლება ითარგმნოს როგორც „ნაგაზი“, არამედ ყოველთვის უნდა ითარგმნოს როგორც „მეცხვარული ძაღლი“ ან „ცხვრის ძაღლი“.
 
 
 (სტატია დამუშავების პროცესშია)
