--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -2,7 +2,7 @@
 ===ეტიმოლოგია===
 
 [[სურათი:Aborigenuli_nagazebi.jpg|thumb|ხალასსისხლიანი აბორიგენული ნაგაზები]]
-'''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი, „გვარიანი“ და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია.
+'''ნაგაზი''' სულხან საბა ორბელიანის განმარტებით არის განსაკუთრებით დიდი, „გვარიანი“ და გულადი ძაღლი. სულხან საბას მიერ მოტანილი ხალხური გადმოცემით ნაგაზი მგლისა და ძაღლის შეჯვარებით მიიღება. სულხან საბა ორბელიანი აგრეთვე განასხვავებს „ნაგაზს“ და „ცხვრის ანუ მეცხვარულ ძაღლს“ - იგი გვასწავლის, რომ მეცხვარული ძაღლი ნაგაზზე უფრო მომცრო და მეტად ბანჯგვლიანია. ნაგაზის (ზოგჯერ ზოგადად ძაღლის) გავრცელებული სინონიმებია „ცუგა“, „ცუგო“ და (თუშირი) „ტუგო“. უნდა საგანგებოდ აღინიშნოს, რომ ისტორიულად საქართველოში ნაგაზი ერთად-ერთი და არსებითად გაბატონებული ძაღლის ჯიში იყო (განსხვავებით მცირერიცხვოვანი „ბაშკიებისაგან“, უჯიშო ძაღლებისაგან).
 
 ===ჯიშის ისტორია===
 
