--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -81,12 +81,21 @@
 * [http://www.simba.com.ge/ „სიმბა“]
 * [http://www.bombora.com.ge/ „ბომბორა“]
 
-===ტერმინის თარგმანი===
+===ტერმინოლოგია და ტერმინის თარგმანი===
 
 * კავკასიური მეცხვარული ძაღლი (რუს.: Кавказская Овчарка, ინგლ.: Caucasian Ovcharka)
 * ნაგაზი (რუს.: Нагази, ინგლ.: [http://www.google.com/search?hl=en&q=nagazi&btnG=Google+Search Nagazi])
 
 '''შენიშვნა''': Овчарка, Shepherd, Sheep dog არ შეიძლება ითარგმნოს როგორც „ნაგაზი“, არამედ ყოველთვის უნდა ითარგმნოს როგორც „მეცხვარული ძაღლი“ ან „ცხვრის ძაღლი“.
+
+* მამალ ძაღლს ეწოდება „ხვადი“
+* დედალ ძაღლს ეწოდება „ძუ“, „ძუკნა“
+* ჩვილ ძაღლს ეწოდება „ლეკვი“
+* მგელზე შემტევ ნაგაზს ეწოდება „მახრჩობელა“
+* ძაღლის ფოლადის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
+* უჯიშო, შერეული სისხლის ძაღლს ეწოდება „ბაშკია“
+* ძაღლების ფერმას ეწოდება „ჯიშთსანაშენე“
+* პერიოდს როდესაც ძუ მზადაა განაყოფიერებისათვის ეწოდება „მძუნაობა“ („მძუნავი ძუკნა“)
 
 
 (სტატია დამუშავების პროცესშია)
