/* ტერმინოლოგია და ტერმინის თარგმანი */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -94,6 +94,8 @@
 * მგელზე შემტევ ნაგაზს ეწოდება „მახრჩობელა“
 * ძაღლის ფოლადის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
 * უჯიშო, შერეული სისხლის ძაღლს ეწოდება „ბაშკია“
+* ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“ - „ყურდაცვეთილი ნაგაზი“
+* ყურშას უწოდებენ ნაგაზს, რომელსაც ყურები არ აქვს „დაცვეთილი“
 * ძაღლების ფერმას ეწოდება „ჯიშთსანაშენე“
 * პერიოდს როდესაც ძუ მზადაა განაყოფიერებისათვის ეწოდება „მძუნაობა“ („მძუნავი ძუკნა“)
 
