/* ტერმინოლოგია და ტერმინის თარგმანი */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -92,11 +92,11 @@
 * დედალ ძაღლს ეწოდება „ძუ“, „ძუკნა“
 * ჩვილ ძაღლს ეწოდება „ლეკვი“
 * მგელზე შემტევ, მგლების გამანადგურებელ ნაგაზს ეწოდება „მახრჩობელა“
-* ძაღლის ფოლადის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
+* ძაღლის ლითონის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
 * უჯიშო, შერეული სისხლის ძაღლს ეწოდება „ბაშკია“
 * ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“ - „ყურდაცვეთილი ნაგაზი“
 * „ყურშას“ უწოდებენ ნაგაზს, რომელსაც ყურები არ აქვს „დაცვეთილი“
-* „ხალასსისხლიანი“ არის ძაღლი, რომელიც წინაპრების კონტროლირებადი შერჩევითაა გაჩენილი (სულ ცოტა 3 თაობისა)
+* „ხალასსისხლიანი“ ანუ „ჯიშიანი“ არის ძაღლი, რომელიც წინაპრების კონტროლირებადი შერჩევითაა გაჩენილი (სულ ცოტა 3 თაობისა)
 * ხალასსისხლიანი ძაღლების მოსაშენებელ ფერმას ეწოდება „ჯიშთსანაშენე“
 * პერიოდს როდესაც ძუ მზადაა განაყოფიერებისათვის ეწოდება „მძუნაობა“ („მძუნავი ძუკნა“)
 
