--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -12,7 +12,7 @@
 [[სურათი:Nagazi_changlebit.gif|thumb|მგლის მახრჩობელა ნაგაზი ჯავშან-„ჩანგლებით“]]
 [[სურათი:Kelgamogadruli_cxvari.png|thumb|მგლის მიერ ყელგამოღადრული ცხვარი]]
 
-'''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულისა „ყარაბაში“). ქართველი მეცხვარეები გამორჩეულ ნაგაზებს, რომლებიც გამოცდილი არიან მგელთან შებრძოლებაში „მახრჩობელებსაც“ უწოდებენ (Волкодав). ნაგაზი ფართო გამოყენების ჯიშია და იგი გამოიყენებოდა როგორც მეცხვარული (ცხვრის), აგრეთვე - მოდარაჯე და საბრძოლო მიზნებისათვის. 
+'''ნაგაზი''' ენდემური, აბორიგენული კავკასიური „მთის“ ძაღლის ქართული ქვეჯიშის კერძო სახელია (სომხური ქვეჯიშის კერძო სახელია „გამპრ“, აღმოსავლეთ-თურქულისა „ყარაბაშ“). ქართველი მეცხვარეები გამორჩეულ ნაგაზებს, რომლებიც გამოცდილი არიან მგელთან შებრძოლებაში „მახრჩობელებსაც“ უწოდებენ (Волкодав). ნაგაზი ფართო გამოყენების ჯიშია და იგი გამოიყენებოდა როგორც მეცხვარული (ცხვრის), აგრეთვე - მოდარაჯე და საბრძოლო მიზნებისათვის. 
 
 
 ზოგჯერ შეცდომით '''ნაგაზს''' „ქართულ ნაგაზს“ უწოდებენ (სხვა ნაგაზი ქართულის გარდა არ არსებობს), ხოლო - '''გერმანულ მეცხვარულ ძაღლს''' კი ასევე შეცდომით უწოდებენ „'''გერმანულ ნაგაზს'''“ (ანუ „ნაგაზით“ ცვლიან „მეცხვარულ ძაღლს“). 
