--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -55,7 +55,7 @@
 
 ===ნაგაზი საქართველოში===
 
-[[სურათი:Simba.jpg|thumb|მსოფლიოს ჩემპიონი „სიმბა“ წოდორეთიდან]]
+[[სურათი:Simba.jpg|thumb|მსოფლიოს ჩემპიონი „სიმბა“ წოდორეთიდან (მ.ჭკუასელი)]]
 [[სურათი:Basmach_abashidze.png|thumb|მსოფლიოს ჩემპიონი „ბასმაჩი“ (ა.აბაშიძე)]]
 
 
