--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -65,13 +65,13 @@
 მეორე ომისშემდგომ საქართველოში ნაგაზის ჯიშის აღდგენაზე ზრუნვა კერძო ენთუზიასტებმა დაიწყეს 70-იანი წლებიდან, როდესაც „ფაუნის მოყვარულთა კლუბმა“ გარემოს დაცვის სამინისტროს მხარდაჭერით მოაწყეს ექსპედიცია საქართველოს რაიონებში ჯიშის მდგომერეობის შესასწავლად. მოეწყო აგრეთვე საგანგებო ტელეგადაცემები და დაიბეჭდა საგაზეთო სტატიები - რომელთა მიზანი იყო ნაგაზის ჯიშის გადარჩენა და გაუმჯობესება. ამავე პერიოდში გამოფენებზე გამოჩნდნენ პირველი აბორიგენული ნაგაზები და რუსეთიდან ჩამოჯიშებული კავკასიური მეცხვარული ძაღლები. 1970-იანი წლების თბილისის ჩემპიონებს შორის იყვნენ ხვადი „ზორბა“ და ძუკნები „ციბა“ და „ჩუკა“.
 
 
-საქართველოს დამოუკიდებლობის აღდგენის შემდგომ ნაგაზის ჯიშის აღდგენა-გაუმჯობესებაზე მუშაობა განახლდა. სამწუხაროდ, ჯიშთსანაშენეებში უპირატესად იყენებენ რუსეთიდან იმპორტირებულ კავკასიურ მეცხვარულ ძაღლებს და კვლავ ნაკლები ყურადღება ექცევა აბორიგენული სისხლის გამოყენებას (რამდენადაც კავკასიური მეცხვარული ძაღლის მოშენებაში რუსული და ევრო-ამერიკული ჯიშთსანაშენეებისათვის კონკურენცია შეუძლებელია).
+საქართველოს დამოუკიდებლობის აღდგენის შემდგომ ნაგაზის ჯიშის აღდგენა-გაუმჯობესებაზე მუშაობა განახლდა. სამწუხაროდ, ჯიშთსანაშენეებში უპირატესად იყენებენ რუსეთიდან იმპორტირებულ კავკასიურ მეცხვარულ ძაღლებს და კვლავ ნაკლები ყურადღება ექცევა აბორიგენული სისხლის გამოყენებას.
 
 
 დიდი წარმატება ხვდა წილად კავკასიური მეცხვარული ძაღლების აჭარის ჯიშთსანაშენეს - რომლის ნაგაზი „ბასმაჩი“ (ა.აბაშიძე) მრავალგზის მსოფლიო ჩემპიონი გახდა. სამწუხაროდ აჭარაში რევოლუციის შემდგომ ეს ჯიშთსანაშენე დაიშალა და ძაღლების უმეტესობა კვლავ რუსეთში მოხვდა. მსოფლიო ჩემპიონი ამავე პერიოდში გახდა კავკასიური მეცხვარული ძაღლი „სიმბა“ (მ.ჭკუასელი) წოდორეთიდან.
 
 
-ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის ნაგაზებზე - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება.
+ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის ნაგაზებზე - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება (რამდენადაც კავკასიური მეცხვარული ძაღლის მოშენებაში რუსული და ევრო-ამერიკული ჯიშთსანაშენეებისათვის კონკურენცია შეუძლებელია).
 
 ===რესურსები ვებში===
 
