--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -21,7 +21,7 @@
 ნაგაზი ზოგადად განეკუთვნება „მოლოსების“ ანუ „ალპიური ძაღლების“ დიდ ოჯახს და არსებითი მოსაზრებით იგი გავრცელდა მეცხვარეობის გავრცელებასთან ერთად - როგორც დარგის აუცილებელი და განუყოფელი უზრუნველმყოფი ატრიბუტი. ევროპის მთელს მთიანეთში დაწყებული ესპანეთიდან და ბასკეთიდან და დასრულებული კავკასიით ყველგან გვხვდება ძალზე მსგავსი, ფრიად მონათესავე მეცხვარული ძაღლები. შედარებით უფრო განსხვავებული ქვეჯიში ვრცელდება აღმოსავლეთი კასპიისპირეთის მთიანეთებიდან ინდოჩინეთის მთიანეთების ჩათვლით.
 
 
-განსხვავებით ევროპული მეცხვარული ძაღლებისაგან, ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად (ანუ გასადენად და შესაგროვებლად, მოსაქუჩებლად), არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ელვის სისწრაფით ყელს ღადრავს 5-12 ცხვარს). ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის ფასეულობაზე.
+განსხვავებით ევროპული მეცხვარული ძაღლებისაგან, ისტორიულად ნაგაზს არ იყენებდნენ ცხვრის სამწყემსად (ანუ გასადენად და შესაგროვებლად, მოსაქუჩებლად), არამედ - იყენებდნენ უმთავრესად ცხვრის ფარებისა და ფარეხების მგლებისაგან დასაცავად - რასაც ცეცხლსასროლი იარაღის ეპოქამდე გადამწყვეტი და სასიცოცხლო მნიშვნელობა ჰქონდა. მგლის ხროვა ფარაზე თავდასხმისას კლავს ბევრად მეც ცხვარს, ვიდრე მას საკვებად სჭირდება (საშუალოდ ერთი მგელი ერთ თავდასხმაზე ელვის სისწრაფით ყელს ღადრავს 5-12 ცხვარს). აღნუსხულია შემთხვევები, როდესაც რამდენიმე მგელს ერთ ღამეში ასობით ცხვარი გაუწყვეტიათ. ავესტაში წერია: „არ იდგებოდნენ მტკიცედ ჩვენი სახლები თუ ძაღლი არ გვეყოლებოდა - რომელიც ჩვენს შინაურ ცხოველებსა და ბინას იცავს“. აგრეთვე ავესტის მიხედვით მეცხვარული ძაღლის მკვლელი ადამიანი ისჯებოდა მათრახის 900 დაკვრით - რაც მიუთითებს ძაღლის ფასეულობაზე.
 
 ===ნაგაზის ადგილი ჯიშში===
 [[სურათი:Caucassian_Ovcharka_Topush_Georgia_1950ies.png|thumb|საბჭოთა კავკასიური მეცხვარული ძაღლის ჯიშის დამაფუძნებელი, 1950-აინი წლების მრავალგზის ჩემპიონი, ლეგენდარული „თოფუშა“ - რომელსაც ათობით მგელი ჰყავდა მოკლული]]
