*Empty MediaWiki Message*

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Tetri nagazi.jpg|thumb|თეთრი ნაგაზი]]
+[[სურათი:Tetri nagazi.jpg|thumb|თეთრი ძუ ნაგაზი]]
 ===ეტიმოლოგია===
 
 [[სურათი:Aborigenuli_nagazebi.jpg|thumb|ხალასსისხლიანი აბორიგენული ნაგაზები]]
