--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -71,7 +71,7 @@
 დიდი წარმატება ხვდა წილად კავკასიური მეცხვარული ძაღლების აჭარის ჯიშთსანაშენეს - რომლის ნაგაზი „ბასმაჩი“ (ა.აბაშიძე) მრავალგზის მსოფლიო ჩემპიონი გახდა. სამწუხაროდ აჭარაში რევოლუციის შემდგომ ეს ჯიშთსანაშენე დაიშალა და ძაღლების უმეტესობა კვლავ რუსეთში მოხვდა. მსოფლიო ჩემპიონი ამავე პერიოდში გახდა კავკასიური მეცხვარული ძაღლი „სიმბა“ (მ.ჭკუასელი) წოდორეთიდან.
 
 
-ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის '''ნაგაზებზე''' - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება (რამდენადაც კავკასიური მეცხვარული ძაღლის მოშენებაში რუსული და ევრო-ამერიკული ჯიშთსანაშენეებისათვის კონკურენცია შეუძლებელია). აგრეთვე საშურია 2-3 სპეციალიზებული ქართველი კინოლოგისა და მსოფლიო რანგის მსაჯის არსებობა.
+ნაგაზების საქართველოში ჯიშთსანაშენე საქმიანობის მთავარ მიმართულებად მოიაზრება ყურადღების კონცენტრირება '''აბორიგენულ''', ხალასი სისხლის '''თეთრ ნაგაზებზე''' - რომლებზე მსოფლიოს მასშტაბით მოთხოვნილება თანდათანობით არსებითი ხდება (რამდენადაც კავკასიური მეცხვარული ძაღლის მოშენებაში რუსული და ევრო-ამერიკული ჯიშთსანაშენეებისათვის კონკურენცია შეუძლებელია). აგრეთვე საშურია 2-3 სპეციალიზებული ქართველი კინოლოგისა და მსოფლიო რანგის მსაჯის არსებობა.
 
 ===რესურსები ვებში===
 
