/* ტერმინოლოგია და ტერმინის თარგმანი */

--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -97,7 +97,7 @@
 * მგელზე შემტევ, მგლების გამანადგურებელ ნაგაზს ეწოდება „მახრჩობელა“
 * ძაღლის ლითონის საყელურს, რომელსაც აქვს ნემსები მგლის კბილებისაგან დასაცავად ეწოდება „ჩანგლები“
 * უჯიშო, შერეული სისხლის ძაღლს ეწოდება „ბაშკია“
-* ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“ - „ყურდაცვეთილი ნაგაზი“
+* ნაგაზებს ტრადიციისამებრ ყურებს აჭრიან ანუ „უცვითავენ, უცქვიტავენ“
 * „ყურშას“ უწოდებენ ნაგაზს, რომელსაც ყურები არ აქვს „დაცვეთილი“
 * „ხალასსისხლიანი“ ანუ „ჯიშიანი“ არის ძაღლი, რომელიც წინაპრების კონტროლირებადი შერჩევითაა გაჩენილი (სულ ცოტა 3 თაობისა)
 * ხალასსისხლიანი ძაღლების მოსაშენებელ ფერმას ეწოდება „ჯიშთსანაშენე“
