--- a/ნაგაზი.mw
+++ b/ნაგაზი.mw
@@ -48,7 +48,7 @@
 1950-იანი წლებიდან კავკასიური მეცხვარული ძაღლის მასობრივი მოჯიშება სახელმწიფო დონეზე დაიწყეს საბჭოთა კავშირში. ათობით ათასი კავკასიური მეცხვარული ძაღლი გამოიყენებოდა სამეურნეო, სამხედრო ობიექტების (მათ შორის „ბერლინის კედლისა“) და მრავალმილიონიანი პატიმრობის ადგილების დასაცავად. 
 
 
-საბჭოთა კავშირის მთავარი კონოლოგი '''ა.მაზოვერი''' აღნიშნავდა, რომ ნაგაზი საუკეთესო იყო კავკასიური მეცხვარულ ძაღლების ქვეჯიშებში. სპეციალისტი კინოლოგები ერთხმად აღნიშნავენ, რომ კავკასიური ცხვრის ძაღლის მოჯიშება უმთავრესად ეფუძნებოდა საქართველოდან გაყვანილ საუკეთესო ეგზემპლიარებს (დიდი მასშტაბებით ჩატარებულმა ამ ღონისძიებამ დიდად დააზარალა ნაგაზის ჯიში საკუთრივ საქართველოში). 
+საბჭოთა კავშირის მთავარი კონოლოგი '''ა.მაზოვერი''' აღნიშნავდა, რომ ნაგაზი საუკეთესო იყო კავკასიური მეცხვარულ ძაღლების ქვეჯიშებში. სპეციალისტი კინოლოგები ერთხმად აღნიშნავენ, რომ კავკასიური მეცხვარული ძაღლის მოჯიშება უმთავრესად ეფუძნებოდა საქართველოდან 1950-1960 წწ. გაყვანილ საუკეთესო ეგზემპლიარებს (დიდი მასშტაბებით ჩატარებულმა ამ ღონისძიებამ ფრიად დააზარალა ნაგაზის ჯიში საკუთრივ საქართველოში). 
 
 
 გასული საუკუნის 70-80-იანი წლებისათვის საბჭოთა ჯიშთსანაშენეებმა დიდი და მიზანდასახული მუშაობით მნიშვნელოვნად დახვეწეს და გააუმჯობესეს ჯიში, რომელიც არსებითად დაშორდა აბორიგენულ წინაპრებს. საუკუნეების მიჯნაზე, საბჭოთა კავშირის დაშლის შემდგომ, რუსეთმა „კავკასიური მეცხვარული ძაღლი (Кавказская Овчарка)“ და მისი სტანდარტი საერთაშორისო მასშტაბით დაარეგისტრირა როგორც რუსული ჯიში.
